restructuring & template conformity

--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -851,6 +851,21 @@
   langid = {english}
 }
 
+@article{harrisonVertebralLandmarksIdentification2013a,
+  title = {Vertebral Landmarks for the Identification of Spinal Cord Segments in the Mouse},
+  author = {Harrison, Megan and O'Brien, Aine and Adams, Lucy and Cowin, Gary and Ruitenberg, Marc J. and Sengul, Gulgun and Watson, Charles},
+  date = {2013-03},
+  journaltitle = {NeuroImage},
+  shortjournal = {NeuroImage},
+  volume = {68},
+  pages = {22--29},
+  issn = {10538119},
+  doi = {10.1016/j.neuroimage.2012.11.048},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1053811912011603},
+  urldate = {2024-09-24},
+  langid = {english}
+}
+
 @book{hausdorffGrundzuegeMengenlehre1978,
   title = {Grundzüge der Mengenlehre},
   author = {Hausdorff, Felix},
@@ -2169,6 +2184,16 @@
   file = {/home/ro/Zotero/storage/FJDBF5T6/Sheppard et al. - 2014 - Techniques in helical scanning, dynamic imaging an.pdf}
 }
 
+@software{shorterGoodDocsProject2024,
+  title = {The {{Good Docs Project}}},
+  author = {Shorter, Cameron and Macklin, Ryan and Rock, Alyssa and Brand, Felicity and Murugesan, Ravi and Luedtke, Tina},
+  date = {2024-06-13},
+  url = {https://thegooddocsproject.dev/},
+  urldate = {2024-09-24},
+  organization = {The Good Docs Project (TGDP)},
+  version = {v1.2.0}
+}
+
 @online{slicercommunity3DSlicerImage2022,
   title = {{{3D Slicer}} Image Computing Platform},
   author = {{Slicer Community}},
@@ -2273,6 +2298,25 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/S0167814011006074},
   urldate = {2023-09-16},
   langid = {english}
+}
+
+@article{sunderlandFractionalLabelmapRepresentation2017,
+  title = {Fractional Labelmap Representation of Anatomical Structures},
+  author = {Sunderland, Kyle Remington},
+  date = {2017}
+}
+
+@inproceedings{sunderlandFractionalLabelmapsComputing2017,
+  title = {Fractional Labelmaps for Computing Accurate Dose Volume Histograms},
+  author = {Sunderland, Kyle and Pinter, Csaba and Lasso, Andras and Fichtinger, Gabor},
+  editor = {Webster, Robert J. and Fei, Baowei},
+  date = {2017-03-03},
+  pages = {101352Y},
+  location = {Orlando, Florida, United States},
+  doi = {10.1117/12.2254978},
+  url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?doi=10.1117/12.2254978},
+  urldate = {2024-09-24},
+  eventtitle = {{{SPIE Medical Imaging}}}
 }
 
 @article{sunVivoDetectionPlaque2022,
