--- a/includes/thesis/part01-page2-declaration.tex
+++ b/includes/thesis/part01-page2-declaration.tex
@@ -1,6 +1,8 @@
 %!TEX root = ../../thesis.tex
 
-\vspace{150pt}
+\includegraphics[width=6cm]{images/fhwn-logo-neu-ohneSchutzraum.png}
+
+\vspace{100pt}
 
 \begin{center}
 	{\noindent\fontsize{18pt}{21.6pt}\color{header-blue}\textbf{\sffamily DECLARATION OF INTEGRITY}}
