--- a/includes/thesis/masterthesis-vars.sty
+++ b/includes/thesis/masterthesis-vars.sty
@@ -13,15 +13,18 @@
 \newcommand{\thesisdate}{\today}
 \renewcommand{\contentsname}{Table of Contents}
 
+% save time typing
 \newcommand{\mct}{micro-CT}
 \newcommand{\diatx}{Di\'{a}taxis}
+\newcommand{\good}{The Good Docs Project}
 
-\newcommand{\tb}{TextBlob}
-\newcommand{\nb}{\ac{NB}}
-\newcommand{\me}{\ac{ME}}
-\newcommand{\svm}{\ac{SVM}}
 
-\newcommand{\ftb}{$S_{TB}$}
-\newcommand{\fnb}{$S_{NB}$}
-\newcommand{\fme}{$S_{ME}$}
-\newcommand{\fsvm}{$S_{SVM}$}
+%\newcommand{\tb}{TextBlob}
+%\newcommand{\nb}{\ac{NB}}
+%\newcommand{\me}{\ac{ME}}
+%\newcommand{\svm}{\ac{SVM}}
+
+%\newcommand{\ftb}{$S_{TB}$}
+%\newcommand{\fnb}{$S_{NB}$}
+%\newcommand{\fme}{$S_{ME}$}
+%\newcommand{\fsvm}{$S_{SVM}$}
